Put images on website into one folder
Also updated code to point to folder with photos

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <div class = "wrapper">
 <body>
     <div id = "logo">
-        <img src = "potential logo.jpg" alt = "Dracula Logo">
+        <img src = "photos/potential logo.jpg" alt = "Dracula Logo">
     </div>
     <header>
         <div id = "header">
@@ -25,7 +25,7 @@
 
 
     <div class = "picture">
-        <img id = "center" src="contactuspage.jpg" alt="Clown section">
+        <img id = "center" src="photos/contactuspage.jpg" alt="Clown section">
     </div>  
     <div class = "about">
         <h2>Contact Us</h2>
@@ -44,11 +44,11 @@
     </div>
     <div class = "side_photos">
         <figure>
-            <img src = "sidephoto1.jpg" alt = "Vampire">
+            <img src = "photos/sidephoto1.jpg" alt = "Vampire">
             <figcaption>Vampire from our main attraction</figcaption>
         </figure>
         <figure>
-            <img src = "sidephoto2.jpg" alt = "Haunted Killers">
+            <img src = "photos/sidephoto2.jpg" alt = "Haunted Killers">
             <figcaption>Some killers you may come across</figcaption>
         </figure>
         <div>
