--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ I left the sections where I was testing and implementing it -->
 <div class = "wrapper">
 <body>
     <div id = "logo">
-        <img src = "potential logo.jpg" alt = "Dracula Logo">
+        <img src = "photos/potential logo.jpg" alt = "Dracula Logo">
     </div>
     <header>
         <div id = "header">
@@ -56,7 +56,7 @@ I left the sections where I was testing and implementing it -->
 
     <!--<section id="about_content" class = "pageContent"-->
     <div class = "picture">
-        <img id = "center" src="main_picture.jpg" alt="Draculas Dungeon Haunted House">
+        <img id = "center" src="photos/main_picture.jpg" alt="Draculas Dungeon Haunted House">
     </div>  
     <div class = "about">
         <h2>Draculas Dungeon</h2>
@@ -161,11 +161,11 @@ I left the sections where I was testing and implementing it -->
 
     <div class = "side_photos">
         <figure>
-            <img src = "sidephoto1.jpg" alt = "Vampire">
+            <img src = "photos/sidephoto1.jpg" alt = "Vampire">
             <figcaption>Vampire from our main attraction</figcaption>
         </figure>
         <figure>
-            <img src = "sidephoto2.jpg" alt = "Haunted Killers">
+            <img src = "photos/sidephoto2.jpg" alt = "Haunted Killers">
             <figcaption>Some killers you may come across</figcaption>
         </figure>
         <div>
