--- a/tickets.html
+++ b/tickets.html
@@ -6,7 +6,7 @@
 <div class = "wrapper">
 <body>
     <div id = "logo">
-        <img src = "potential logo.jpg" alt = "Dracula Logo">
+        <img src = "photos/potential logo.jpg" alt = "Dracula Logo">
     </div>
     <header>
         <div id = "header">
@@ -24,7 +24,7 @@
 
 
     <div class = "picture">
-        <img id = "center" src="ticketspage.jpg" alt="Draculas Dungeon Haunted House">
+        <img id = "center" src="photos/ticketspage.jpg" alt="Draculas Dungeon Haunted House">
     </div>  
     <div class = "about">
         <h2>Tickets</h2>
@@ -60,11 +60,11 @@
     </div>
     <div class = "side_photos">
         <figure>
-            <img src = "sidephoto1.jpg" alt = "Vampire">
+            <img src = "photos/sidephoto1.jpg" alt = "Vampire">
             <figcaption>Vampire from our main attraction</figcaption>
         </figure>
         <figure>
-            <img src = "sidephoto2.jpg" alt = "Haunted Killers">
+            <img src = "photos/sidephoto2.jpg" alt = "Haunted Killers">
             <figcaption>Some killers you may come across</figcaption>
         </figure>
         <div>
