--- a/visitor.html
+++ b/visitor.html
@@ -10,7 +10,7 @@ whether the information entered can be accepted-->
 <div class = "wrapper">
 <body>
     <div id = "logo">
-        <img src = "potential logo.jpg" alt = "Dracula Logo">
+        <img src = "photos/potential logo.jpg" alt = "Dracula Logo">
     </div>
     <header>
         <div id = "header">
@@ -28,7 +28,7 @@ whether the information entered can be accepted-->
 
 
     <div class = "picture">
-        <img id = "center" src="visitors_page.jpg" alt="Draculas Dungeon Haunted House">
+        <img id = "center" src="photos/visitors_page.jpg" alt="Draculas Dungeon Haunted House">
     </div>  
     <div class = "about">
       <button onclick="showList()">Add Visitor</button>
@@ -149,11 +149,11 @@ whether the information entered can be accepted-->
 
       <div class = "side_photos">
         <figure>
-            <img src = "sidephoto1.jpg" alt = "Vampire">
+            <img src = "photos/sidephoto1.jpg" alt = "Vampire">
             <figcaption>Vampire from our main attraction</figcaption>
         </figure>
         <figure>
-            <img src = "sidephoto2.jpg" alt = "Haunted Killers">
+            <img src = "photos/sidephoto2.jpg" alt = "Haunted Killers">
             <figcaption>Some killers you may come across</figcaption>
         </figure>
         <div>
